tests/invalid/sanity/undefined_variable.php
<?php

function divide(int $a, int $b): int
{
    if ($b === 0) {
        return 0;
    }

    return $a / $c;
}

echo divide(10, 2);

